--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_new"
         android:supportsRtl="true"
         android:theme="@style/Theme.Edu">
         <activity android:name=".visualizacao.principal_activity"></activity>
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".visualizacao.edu_materias" />
-        <activity android:name=".visualizacao.aluno_materias" />
+        <activity android:name=".visualizacao.Aluno_materias" />
         <activity android:name=".visualizacao.MainActivity"></activity>
     </application>
 
